--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "fs": "^0.0.1-security",
         "iconv-lite": "^0.6.3",
         "jsmediatags": "^3.9.7",
+        "mime-types": "^2.1.35",
         "open": "^7.4.2",
         "sharp": "^0.32.0"
     },
