--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     },
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
+        "@ffprobe-installer/ffprobe": "^2.0.0",
         "electron-json-storage": "^4.6.0",
         "electron-reload": "^2.0.0-alpha.1",
         "electron-serve": "^1.1.0",
-        "ffprobe-static": "^3.1.0",
+        "fast-video-metadata": "^3.1.0",
         "fluent-ffmpeg": "^2.1.2",
         "fs": "^0.0.1-security",
         "iconv-lite": "^0.6.3",
+        "image-size": "^1.0.2",
         "jsmediatags": "^3.9.7",
         "mime-types": "^2.1.35",
         "open": "^7.4.2",
