--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "dependencies": {
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@ffprobe-installer/ffprobe": "^2.0.0",
-        "electron-json-storage": "^4.6.0",
         "electron-reload": "^2.0.0-alpha.1",
         "electron-serve": "^1.1.0",
         "fast-video-metadata": "^3.1.0",
@@ -41,7 +40,8 @@
         "jsmediatags": "^3.9.7",
         "mime-types": "^2.1.35",
         "open": "^7.4.2",
-        "sharp": "^0.32.0"
+        "sharp": "^0.32.0",
+        "sqlite3": "^5.1.6"
     },
     "devDependencies": {
         "@rollup/plugin-commonjs": "^23.0.2",
